[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-recon"
version = "1.0.0"
authors = [{ name = "Ivan Sincek" }]
description = "Not another auto-reconnaissance framework."
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: POSIX :: Linux"
]
dependencies = [
	"colorama>=0.4.6",
	"cryptography>=46.0.5",
	"jq>=1.11.0",
	"pyOpenSSL>=25.3.0",
	"regex>=2026.2.28",
	"tabulate>=0.9.0",
	"termcolor>=3.3.0",
	"tldextract>=5.3.1"
]

[project.urls]
"Homepage" = "https://github.com/ivan-sincek/auto-recon"

[project.scripts]
auto-recon = "auto_recon.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["wordlists/*.txt"]
